refactor: actualizar adaptadores de persistencia para usar métodos de colección más eficientes y agregar mapeadores